# compare_similarity

./: CMakeLists.txt
include/: compare_similarity.h
src/: compare_similarity.cc  unit_test.cc
